--- a/BERANDA.html
+++ b/BERANDA.html
@@ -11,9 +11,7 @@
 
     <header class="main-header">
         <div class="top-bar">
-            <div class="logo">
-                <img src="LOGO KREASI.png">
-            </div>
+            <div class="logo">KREASI <span class="subtitle">Pusat Inovasi dan Edukasi Anak Indonesia</span></div>
             <div class="search-box">
                 <input type="text" placeholder="Cari...">
                 <button class="search-btn"><i class="fas fa-search"></i></button>
