--- a/BERANDA.html
+++ b/BERANDA.html
@@ -13,6 +13,7 @@
         <div class="top-bar">
             <div class="logo">
                 <img src="LOGO KREASI.png">
+                <img width="300" height="170" src="KREASI-SYMBOL_KREASI--768x416.png"alt="LOGO KREASI" class="kresi-logo">
             </div>
             <div class="search-box">
                 <input type="text" placeholder="Cari...">
