--- a/BERANDA.html
+++ b/BERANDA.html
@@ -19,7 +19,7 @@
                 <button class="search-btn"><i class="fas fa-search"></i></button>
             </div>
             <div class="right-logos">
-                <img src="dikdesmen.png" alt="Logo Kemendikbud" class="kemendikbud-logo">
+                <img height="70" src="dikdesmen.png" alt="Logo Kemendikbud" class="kemendikbud-logo">
                 <img src="https://via.placeholder.com/35" alt="Logo Kemitraan" class="kemitraan-logo">
             </div>
         </div>
