--- a/BERANDA.html
+++ b/BERANDA.html
@@ -52,7 +52,9 @@
 
     <main class="main-content homepage-layout">
         <section class="hero-banner">
-            <div class="hero-content"><h2>PELATIHAN PEMBELAJARAN MENDALAM</h2></div>
+            <div class="hero-content">
+                <img src="bd.JPG">
+            </div>
         </section>
 
         <section class="section-acara">
