--- a/BERANDA.html
+++ b/BERANDA.html
@@ -53,7 +53,7 @@
     <main class="main-content homepage-layout">
         <section class="hero-banner">
             <div class="hero-content">
-                <img src="bd.JPG">
+                <img height="500" width="100" src="bd.JPG">
             </div>
         </section>
 
