--- a/BERANDA.html
+++ b/BERANDA.html
@@ -52,8 +52,9 @@
 
     <main class="main-content homepage-layout">
         <section class="hero-banner">
-            <div class="hero-content">
-                <img height="800" src="bd.JPG">
+            <div class="slides">
+                <img class="slide" height="800" src="bd.JPG">
+                <img class="slide" height="800" src="mentoring sekolah mentubang.JPG">
             </div>
         </section>
 
