--- a/BERANDA.html
+++ b/BERANDA.html
@@ -52,9 +52,14 @@
 
     <main class="main-content homepage-layout">
         <section class="hero-banner">
-            <div class="slides">
-                <img class="slide" height="800" src="bd.JPG">
-                <img class="slide" height="800" src="mentoring sekolah mentubang.JPG">
+            <div class="slider">
+                 <div class="slides">
+                <img class="slide" src="bd.JPG">
+                <img class="slide" src="mentoring sekolah mentubang.JPG">
+                <img class="slide" src="learning sesasson 6 agus.JPG">
+                <img class="slide" src="pelatihan ispirasi 15 agus.JPG">
+                <img class="slide" src="lokakarya 3okto.JPG">
+            </div>
             </div>
         </section>
 
