--- a/BERANDA.html
+++ b/BERANDA.html
@@ -52,7 +52,7 @@
 
     <main class="main-content homepage-layout">
         <section class="hero-banner">
-            <div class="slider">
+            <div class="slideshow">
                  <div class="slides">
                 <img class="slide" src="bd.JPG">
                 <img class="slide" src="mentoring sekolah mentubang.JPG">
@@ -61,6 +61,7 @@
                 <img class="slide" src="lokakarya 3okto.JPG">
             </div>
             </div>
+            <script src="script.js"></script>
         </section>
 
         <section class="section-acara">
