--- a/BERANDA.html
+++ b/BERANDA.html
@@ -54,11 +54,11 @@
         <section class="hero-banner">
             <div class="slider">
                  <div class="slides">
-                <img class="slide" src="bd.JPG">
-                <img class="slide" src="mentoring sekolah mentubang.JPG">
-                <img class="slide" src="learning sesasson 6 agus.JPG">
-                <img class="slide" src="pelatihan ispirasi 15 agus.JPG">
-                <img class="slide" src="lokakarya 3okto.JPG">
+                <div class="slide"> <img src="bd.JPG"></div>
+                <div class="slide"> <img src="learning sesasson 6 agus.JPG"></div>
+                <div class="slide"> <img src="mentoring sekolah mentubang.JPG"></div>
+                <div class="slide"> <img src="pelatihan ispirasi 15 agus.JPG"></div>
+                <div class="slide"> <img src="lokakarya 3okto.JPG"></div>
             </div>
             </div>
         </section>
