--- a/BERANDA.html
+++ b/BERANDA.html
@@ -12,14 +12,14 @@
     <header class="main-header">
         <div class="top-bar">
             <div class="logo">
-                <img height="70" src="KREASI-SYMBOL_KREASI--768x416.png"alt="LOGO KREASI" class="kresi-logo">
+                <img height="70" src="FOTO BERANDA/KREASI-SYMBOL_KREASI--768x416.png"alt="LOGO KREASI" class="kresi-logo">
             </div>
             <div class="search-box">
                 <input type="text" placeholder="Cari...">
                 <button class="search-btn"><i class="fas fa-search"></i></button>
             </div>
             <div class="right-logos">
-                <img height="70" src="dikdesmen.png" alt="Logo Kemendikbud" class="kemendikbud-logo">
+                <img height="70" src="FOTO BERANDA/dikdesmen.png" alt="Logo Kemendikbud" class="kemendikbud-logo">
                 <img src="https://via.placeholder.com/35" alt="Logo Kemitraan" class="kemitraan-logo">
             </div>
         </div>
@@ -53,11 +53,11 @@
         <section class="hero-banner">
             <div class="slider">
                  <div class="slides">
-                <div class="slide"> <img src="bd.JPG"></div>
-                <div class="slide"> <img src="learning sesasson 6 agus.JPG"></div>
-                <div class="slide"> <img src="mentoring sekolah mentubang.JPG"></div>
-                <div class="slide"> <img src="pelatihan ispirasi 15 agus.JPG"></div>
-                <div class="slide"> <img src="lokakarya 3okto.JPG"></div>
+                <div class="slide"> <img src="FOTO BERANDA/Kampanye Perlindungan Anak 10.9.25.jpegn "></div>
+                <div class="slide"> <img src="FOTO BERANDA/Monitoring Sekolah Mentuban 1.10.25.JPG"></div>
+                <div class="slide"> <img src="FOTO BERANDA/meeting kreasi bersama lptk.JPG"></div>
+                <div class="slide"> <img src="FOTO BERANDA/learning revitais 18.9.25.JPG"></div>
+                <div class="slide"> <img src="FOTO BERANDA/refleksi dan konitor 3 sep .JPG"></div>
             </div>
             </div>
         </section>
