--- a/BERANDA.html
+++ b/BERANDA.html
@@ -20,7 +20,6 @@
             </div>
             <div class="right-logos">
                 <img height="70" src="FOTO BERANDA/dikdesmen.png" alt="Logo Kemendikbud" class="kemendikbud-logo">
-                <img src="https://via.placeholder.com/35" alt="Logo Kemitraan" class="kemitraan-logo">
             </div>
         </div>
 
@@ -31,7 +30,8 @@
             <div class="nav-item has-dropdown">PROFILE <i class="fas fa-caret-right"></i>
                 <div class="dropdown-content profile-dropdown">
                     <a href="profile.html">TENTANG</a>
-                    <a href="#">VISI MISI</a>
+                    <a href="#">TUJUAN</a>
+                    <a href="#">PROGRAM KREASI</a>
                     <a href="#">STRUKTUR</a>
                 </div>
             </div>
@@ -87,14 +87,15 @@
 
     <footer class="main-footer">
         <div class="footer-container">
-            <div class="footer-col about-us">
-                <h3>Tentang Kami</h3><p>KREASI adalah pusat kolaborasi untuk memajukan pendidikan anak Indonesia melalui inovasi dan akses materi berkualitas.</p>
+            <div class="footer-left">
+                <h3>About Us</h3>
+                <p>KREASI adalah pusat kolaborasi untuk memajukan pendidikan anak Indonesia melalui inovasi dan akses materi berkualitas.</p>
             </div>
-            <div class="footer-col contact-info">
-                <h3>Informasi Kontak</h3>
-                <div class="contact-item"><i class="fas fa-map-marker-alt"></i> Jl. Inovasi No. 1, Jakarta Pusat, Indonesia</div>
-                <div class="contact-item"><i class="fas fa-phone"></i> (021) 1234 5678</div>
-                <div class="contact-item"><i class="fas fa-envelope"></i> info@kreasi.id</div>
+            <div class="footer-right">
+                <h3>Contact Information</h3>
+                <div class="contact-item"><i class="fas fa-map-marker-alt"></i> Jalan Bangka IX Nomor 40A&B, Pela Mampang, Mampang Prapatan, Jakarta Selatan, DKI Jakarta 12720</div>
+                <div class="contact-item"><i class="fas fa-phone"></i>  (+62) 217824415 </div>
+                <div class="contact-item"><i class="fas fa-envelope"></i> Indonesia.KREASI@savethechildren.org</div>
             </div>
         </div>
     </footer>
