--- a/PROFILE.html
+++ b/PROFILE.html
@@ -28,7 +28,8 @@
             <div class="nav-item has-dropdown active">PROFILE <i class="fas fa-caret-right"></i>
                 <div class="dropdown-content profile-dropdown">
                     <a href="profile.html" class="active">TENTANG</a>
-                    <a href="#">VISI MISI</a>
+                    <a href="#">TUJUAN</a>
+                    <a href="#">PROGRAM KREASI</a>
                     <a href="#">STRUKTUR</a>
                 </div>
             </div>
