--- a/BERANDA.html
+++ b/BERANDA.html
@@ -26,13 +26,13 @@
         <button class="hamburger-menu" id="hamburger"><i class="fas fa-bars"></i></button>
         
         <nav class="main-nav" id="main-nav-menu">
-            <a href="index.html" class="nav-item active">BERANDA</a>
+            <a href="BERANDA.html" class="nav-item active">BERANDA</a>
             <div class="nav-item has-dropdown">PROFILE <i class="fas fa-caret-right"></i>
                 <div class="dropdown-content profile-dropdown">
-                    <a href="profile.html">TENTANG</a>
-                    <a href="#">TUJUAN</a>
-                    <a href="#">PROGRAM KREASI</a>
-                    <a href="#">STRUKTUR</a>
+                    <a href="profile.html#tentang">TENTANG</a>
+                    <a href="profile.html#tujuan">TUJUAN</a>
+                    <a href="profile.html#program">PROGRAM KREASI</a>
+                    <a href="profile.html#struktur">STRUKTUR</a>
                 </div>
             </div>
             <a href="berita.html" class="nav-item">BERITA</a>
