--- a/MATERI.html
+++ b/MATERI.html
@@ -3,21 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KREASI - Materi Pembelajaran</title>
+    <title>KREASI - Materi</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+
     <header class="main-header">
         <div class="top-bar">
-            <div class="logo">KREASI <span class="subtitle">Pusat Inovasi dan Edukasi Anak Indonesia</span></div>
+            <div class="logo">
+                <img height="70" src="FOTO BERANDA/KREASI-SYMBOL_KREASI--768x416.png"alt="LOGO KREASI" class="kresi-logo">
+            </div>
             <div class="search-box">
                 <input type="text" placeholder="Cari...">
                 <button class="search-btn"><i class="fas fa-search"></i></button>
             </div>
             <div class="right-logos">
-                <img src="https://via.placeholder.com/35" alt="Logo Kemendikbud" class="kemendikbud-logo">
-                <img src="https://via.placeholder.com/35" alt="Logo Kemitraan" class="kemitraan-logo">
+                <img height="70" src="FOTO BERANDA/dikdesmen.png" alt="Logo Kemendikbud" class="kemendikbud-logo">
             </div>
         </div>
 
@@ -27,9 +29,10 @@
             <a href="BERANDA.html" class="nav-item">BERANDA</a>
             <div class="nav-item has-dropdown">PROFILE <i class="fas fa-caret-right"></i>
                 <div class="dropdown-content profile-dropdown">
-                    <a href="profile.html">TENTANG</a>
-                    <a href="#">VISI MISI</a>
-                    <a href="#">STRUKTUR</a>
+                    <a href="profile.html#tentang">TENTANG</a>
+                    <a href="profile.html#tujuan">TUJUAN</a>
+                    <a href="profile.html#program">PROGRAM KREASI</a>
+                    <a href="profile.html#struktur">STRUKTUR</a>
                 </div>
             </div>
             <a href="berita.html" class="nav-item">BERITA</a>
@@ -42,7 +45,6 @@
             </div>
             <div class="auth-buttons">
                 <button class="btn btn-id">ID</button>
-                <button class="btn btn-log">LOG IN</button>
             </div>
         </nav>
     </header>
