--- a/BERANDA.html
+++ b/BERANDA.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KREASI - Beranda</title>
+
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-
     <header class="main-header">
         <div class="top-bar">
             <div class="logo">
@@ -72,8 +72,38 @@
         </section>
 
         <section class="section-capaian">
-            <h2>CAPAIAN & SEBARAN PROGRAM</h2>
-            <div class="map-placeholder">PETA VISUALISASI DATA CAPAIAN</div>
+           <div class="container">
+    <h1>LOKASI & INTERVENSI PROGRAM</h1>
+
+    <div class="slide1" id="slide1">
+
+        <div class="green-box">
+            <b>Tahun 2025:</b><br>
+            • 3 Kecamatan<br>
+            • 30 SD/MI<br>
+            • 10 TK/RA
+        </div>
+
+        <div class="arrow-straight"></div>
+        <div class="arrow-tip"></div>
+
+        <img src="FOTO BERANDA/KETAPANG OK OK.png" class="map-img" style="width: 400px; height: 200px; margin-right: 100px;">
+
+        <div class="legend">
+            <div><span style="background:#22b573;"></span>3 Kecamatan Intervensi</div>
+            <div><span style="background:#e63939;"></span>14 Kecamatan Yang Akan Terdampak</div>
+        </div>
+
+        <button id="next1" class="btn">&#8250;</button>
+    </div>
+
+    <div class="slide hide" id="slide2">
+        <h1>SLIDE 2</h1>
+
+        <button id="prev2" class="btn">&#8249;</button>
+    </div>
+
+</div>
         </section>
 
         <section class="section-testimoni">
@@ -102,4 +132,5 @@
     
     <script src="scripts.js"></script>
 </body>
+
 </html>
