--- a/PROFILE.html
+++ b/PROFILE.html
@@ -120,6 +120,20 @@
     <img src="gambar-struktur.png" alt="Struktur Organisasi">
 </section>
 
-    <footer class="main-footer">...</footer> <script src="scripts.js"></script>
+     <footer class="main-footer">
+        <div class="footer-container">
+            <div class="footer-left">
+                <h3>About Us</h3>
+                <p>KREASI adalah pusat kolaborasi untuk memajukan pendidikan anak Indonesia melalui inovasi dan akses materi berkualitas.</p>
+            </div>
+            <div class="footer-right">
+                <h3>Contact Information</h3>
+                <div class="contact-item"><i class="fas fa-map-marker-alt"></i> Jalan Bangka IX Nomor 40A&B, Pela Mampang, Mampang Prapatan, Jakarta Selatan, DKI Jakarta 12720</div>
+                <div class="contact-item"><i class="fas fa-phone"></i>  (+62) 217824415 </div>
+                <div class="contact-item"><i class="fas fa-envelope"></i> Indonesia.KREASI@savethechildren.org</div>
+            </div>
+        </div>
+    </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
