--- a/BERANDA.html
+++ b/BERANDA.html
@@ -29,7 +29,7 @@
             <a href="BERANDA.html" class="nav-item active">BERANDA</a>
             <div class="nav-item has-dropdown">PROFILE <i class="fas fa-caret-right"></i>
                 <div class="dropdown-content profile-dropdown">
-                    <a href="profile.html#tentang">TENTANG</a>
+                    <a href="profile.html">TENTANG</a>
                     <a href="profile.html#tujuan">TUJUAN</a>
                     <a href="profile.html#program">PROGRAM KREASI</a>
                     <a href="profile.html#struktur">STRUKTUR</a>
