--- a/PROFILE.html
+++ b/PROFILE.html
@@ -50,10 +50,13 @@
     </header>
 
     <section id="tentang" class="profile-section about-hero">
+        <div class="container">
         <img src="FOTO PROFILE/kappframework-VphNwN(1)(1).png" alt="Foto About Us">
-        <div class="overlay"></div> 
+        </div>
+        <div class="overlay"> 
         <div class="text">
-            <h1>ABOUT US</h1> 
+            <a href="#kreasi" class="about-scroll">ABOUT US</a> 
+        </div>
         </div>
 </section>
     
@@ -101,23 +104,103 @@
     </p>
 </section>
 
-<section id="program" class="profile-section">
-    <h2>PROGRAM KREASI</h2>
-    <img src="gambar-struktur.png" alt="Struktur Organisasi"><br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+<section id="program" class="profile-section split-kreasi">
+    <div class="split-left">
+        <div class="image-container">
+            <img src="FOTO PROFILE/IMG_8446.JPG" alt="logo program kreasi">
+            <div class="overlay-text">
+        <h2>PROGRAM<br>KREASI</h2>
+      </div>
+    </div>
+  </div>
+
+  <div class="split-right">
+    <div class="split-box">
+    <p>
+      (Kolaborasi untuk Edukasi Anak Indonesia) merupakan program yang didanai oleh
+      Global Partnership for Education (GPE), dan dikembangkan bersama Kementerian
+      Pendidikan Dasar dan Menengah & Kementerian Agama, dan melalui Save The Children
+      dalam konsorsium kolaboratif Mitra Pendidikan Indonesia (MPI).
+    </p>
+        </div>
+    </div>
 </section>
 
-<section id="struktur" class="profile-section">
-    <h2>STRUKTUR ORGANISASI</h2>
-    <img src="gambar-struktur.png" alt="Struktur Organisasi">
+<section id="goals" class="profile-section goals-kreasi">
+    <h2><span class="red">GOALS</span> PROGRAM KREASI</h2>
+    <p> Peningkatan pencapaian keterampilan dasar <span class="red">
+        (Literasi, Numerasi, Pendidikan Karakter) </span> 
+        untuk siswa TK/RA dan SD/MI Indonesia</p>
+    
+<div class="flip-card">
+  <div class="flip-inner">
+    <!-- DEPAN (biru) -->
+    <div class="flip-front">
+      <h3>Kurikulum dan Asessmen</h3>
+    </div>
+
+    <!-- BELAKANG (hijau) -->
+    <div class="flip-back">
+      <p>
+        Kebijakan dan praktik untuk kurikulum materi pembelajaran dan 
+        penilaian keterampilan dasar prasekolah dan sekolah dasar yang 
+        merata di tingkat nasional dan sub-nasional.
+      </p>
+    </div>
+    </div>
+</div>  
+
+<div class="flip-card">
+  <div class="flip-inner">
+    <!-- DEPAN (biru) -->
+    <div class="flip-front">
+      <h3>Praktik Pembelajaran</h3>
+    </div>
+
+    <!-- BELAKANG (hijau) -->
+    <div class="flip-back">
+      <p>
+        Kebijakan dan praktik yang ditingkatkan untuk pengajaran keterampilan 
+        dasar yang merata di daerah target
+      </p>
+    </div>
+  </div>
+</div>  
+
+<div class="flip-card">
+  <div class="flip-inner">
+    <!-- DEPAN (biru) -->
+    <div class="flip-front">
+      <h3>Kepemimpinan Pendidikan</h3>
+    </div>
+
+    <!-- BELAKANG (hijau) -->
+    <div class="flip-back">
+      <p>
+        Kebijakan dan praktik yang ditingkatkan untuk kepemimpinan pengajaran 
+        dan pembelajaran yang adil dan efektif di daerah yang di targetkan
+      </p>
+    </div>
+  </div>
+</div>  
+
+<div class="flip-card">
+  <div class="flip-inner">
+    <!-- DEPAN (biru) -->
+    <div class="flip-front">
+      <h3>Perlindungan Anak</h3>
+    </div>
+
+    <!-- BELAKANG (hijau) -->
+    <div class="flip-back">
+      <p>
+        Kebijakan dan praktik yang lebih baik untuk perlindungan 
+        anak yang adil dan pencegahan kekerasan di daerah yang di 
+        targetkan
+      </p>
+    </div>
+  </div>
+</div>  
 </section>
 
     <footer class="main-footer">...</footer> <script src="scripts.js"></script>
