--- a/BERITA.html
+++ b/BERITA.html
@@ -102,6 +102,57 @@
         </div>
     </main>
 
-    <footer class="main-footer">...</footer> <script src="scripts.js"></script>
+    <footer class="footer">
+  <div class="footer-content">
+
+    <!-- About Us -->
+    <div class="footer-left">
+      <h2>About Us</h2>
+      <p>KREASI adalah pusat kolaborasi untuk memajukan 
+        pendidikan anak Indonesia melalui </p>
+      <p>inovasi dan akses materi berkualitas.</p>
+    </div>
+
+    <!-- Contact Information -->
+    <div class="footer-right">
+      <h2>Contact Information</h2>
+      <p class="subtitle">feel free to contact and reach us!</p>
+
+      <div class="contact-item">
+        <i class="fas fa-map-marker-alt"></i> Jalan Bangka IX Nomor 
+        40A&B,<br> Pela Mampang, Mampang Prapatan, Jakarta Selatan,
+        <br> DKI Jakarta 12720
+      </div>
+      <div class="contact-item">
+        <i class="fas fa-phone"></i> (+62) 217824415
+      </div>
+      <div class="contact-item">
+        <i class="fas fa-envelope"></i> Indonesia.KREASI@savethechildren.org
+      </div>
+
+      <div class="social-icons">
+        <a href="#">📘</a>
+        <a href="#">📸</a>
+        <a href="#">❌</a>
+        <a href="#">💼</a>
+        <a href="#">🎵</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Logo Bar -->
+  <div class="logo-row">
+    <img src="FOOTER\Tut wuri handayani.png" alt="">
+    <img src="FOOTER\Kementerian_Agama_new_logo.png" alt="">
+    <img src="FOOTER\Logo_Kementerian_PPN-Bappenas_(2023).png" alt="">
+    <img src="FOOTER\Lambang_Daerah_Kab._Kayong_Utara.png" alt="">
+    <img src="FOOTER\GPE.png" alt="">
+    <img src="FOTO BERANDA\KREASI-SYMBOL_KREASI--768x416.png" alt="">
+    <img src="FOOTER\Logo_SavetheChildren.png" alt="">
+    <img src="FOTO BERANDA\dikdesmen.png" alt="">
+  </div>
+</footer>
+    
+    <script src="scripts.js"></script>
 </body>
 </html>
