--- a/MATERI.html
+++ b/MATERI.html
@@ -116,11 +116,11 @@
       </div>
 
       <div class="social-icons">
-        <a href="#">📘</a>
-        <a href="#">📸</a>
-        <a href="#">❌</a>
-        <a href="#">💼</a>
-        <a href="#">🎵</a>
+        <a href="#"> <img src="FOOTER\Facebook_font_awesome.svg.png"></a>
+        <a href="#"> <img src="FOOTER\Instagram.png"></a>
+        <a href="#"> <img src="FOOTER\Twitter_X.png"></a>
+        <a href="#"> <img src="FOOTER\LinkedIn_logo_In-Black.svg.png"></a>
+        <a href="#"> <img src="FOOTER\Tiktok_icon.svg.png"></a>
       </div>
     </div>
   </div>
