--- a/BERANDA.html
+++ b/BERANDA.html
@@ -63,7 +63,7 @@
         </section>
 
         <section class="section-acara">
-            <h2>ACARA TERBARU</h2>
+            <h2>BERITA ACARA TERBARU</h2>
             <div class="card-grid acara-grid">
                 <div class="card card-acara"><div class="card-image-placeholder"></div><div class="card-body">KEGIATAN INI bla bla bla bla bla bla bla bal</div></div>
                 <div class="card card-acara"><div class="card-image-placeholder"></div><div class="card-body">KEGIATAN INI bla bla bla bla bla bla bla bal</div></div>
@@ -78,10 +78,57 @@
 
         <section class="section-testimoni">
             <h2>TESTIMONI MITRA</h2>
-            <div class="testimoni-grid">
-                <div class="card card-testimoni"><div class="profile-photo"></div><p class="name">Desta Saputra</p><p class="quote">"Program KREASI telah mengubah cara kami melihat inovasi pendidikan. Sangat direkomendasikan!"</p></div>
-                <div class="card card-testimoni"><div class="profile-photo"></div><p class="name">Rina Handayani</p><p class="quote">"Materi yang disajikan sangat relevan dan mudah diimplementasikan di lapangan."</p></div>
-            </div>
+            <div class="slider-testi">
+            <div class="slider-track-testi">
+      
+      <!-- Card 1 -->
+      <div class="card-testi">
+        <img src="FOTO BERANDA\312-3120300_default-profile-hd-png-download.png" alt="Foto" class="profile-testi">
+        <h3>Desta Saputra</h3>
+        <p>⭐⭐⭐⭐⭐</p>
+        <span>Bla bla la bal bal</span>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="card-testi">
+        <img src="FOTO BERANDA\312-3120300_default-profile-hd-png-download.png" alt="Foto" class="profile-testi">
+        <h3>Desta Saputra</h3>
+        <p>⭐⭐⭐⭐⭐</p>
+        <span>Bla bla la bal bal</span>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="card-testi">
+        <img src="FOTO BERANDA\312-3120300_default-profile-hd-png-download.png" alt="Foto" class="profile-testi">
+        <h3>Desta Saputra</h3>
+        <p>⭐⭐⭐⭐⭐</p>
+        <span>Bla bla la bal bal</span>
+      </div>
+
+      <!-- DUPLIKASI UNTUK LOOP INFINITE -->
+      <div class="card-testi">
+        <img src="FOTO BERANDA\312-3120300_default-profile-hd-png-download.png" class="profile-testi">
+        <h3>Desta Saputra</h3>
+        <p>⭐⭐⭐⭐⭐</p>
+        <span>Bla bla la bal bal</span>
+      </div>
+
+      <div class="card-testi">
+        <img src="FOTO BERANDA\312-3120300_default-profile-hd-png-download.png" class="profile-testi">
+        <h3>Desta Saputra</h3>
+        <p>⭐⭐⭐⭐⭐</p>
+        <span>Bla bla la bal bal</span>
+      </div>
+
+      <div class="card-testi">
+        <img src="FOTO BERANDA\312-3120300_default-profile-hd-png-download.png" class="profile-testi">
+        <h3>Desta Saputra</h3>
+        <p>⭐⭐⭐⭐⭐</p>
+        <span>Bla bla la bal bal</span>
+      </div>
+
+        </div>
+        </div>
         </section>
     </main>
 
@@ -114,11 +161,11 @@
       </div>
 
       <div class="social-icons">
-        <a href="#"> <img src="FOOTER\Facebook_font_awesome.svg.png"></a>
-        <a href="#"> <img src="FOOTER\Instagram.png"></a>
-        <a href="#"> <img src="FOOTER\Twitter_X.png"></a>
-        <a href="#"> <img src="FOOTER\LinkedIn_logo_In-Black.svg.png"></a>
-        <a href="#"> <img src="FOOTER\Tiktok_icon.svg.png"></a>
+        <a href="https://www.facebook.com/SaveChildrenID/" target="_blank"> <img src="FOOTER\Facebook_font_awesome.svg.png"> </a>
+        <a href="https://www.instagram.com/savechildren_id" target="_blank"> <img src="FOOTER\Instagram.png"></a>
+        <a href="https://x.com/savechildren_id" target="_blank"> <img src="FOOTER\Twitter_X.png"></a>
+        <a href="https://www.linkedin.com/company/savethechildren-indonesia/" target="_blank"> <img src="FOOTER\LinkedIn_logo_In-Black.svg.png"></a>
+        <a href="#" target="_blank"> <img src="FOOTER\Tiktok_icon.svg.png"></a>
       </div>
     </div>
   </div>
