--- a/PROFILE.html
+++ b/PROFILE.html
@@ -212,6 +212,81 @@
 </div>
 </section>
 
+<section class="STRUKTUR ORGANISASI">
+            <h2>STRUKTUR ORGANSIASI</h2>    
+  <div class="judul"><h2>PIMPINAN PUSAT</h2>
+    <div class="garis"></div>
+  </div>
+
+  <div class="struktur-container">
+    <div class="card">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+
+    <div class="card">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+
+    <div class="card">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+  </div>
+
+  <div class="judul"><h2>NATIONAL OFFICE</h2>
+    <div class="garis"></div>
+  </div>
+
+  <div class="struktur-container">
+    <div class="card">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+
+    <div class="card">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+
+    <div class="card">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+  </div>
+
+  <div class="judul"><h2>PROGRAM MANAGER</h2>
+    <div class="garis"></div>
+  </div>
+
+  <div class="struktur-container">
+    <div class="card">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+
+    <div class="card">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+
+    <div class="card">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+  </div>
+        </section>
+
 <footer class="footer">
   <div class="footer-content">
 
@@ -241,11 +316,11 @@
       </div>
 
       <div class="social-icons">
-        <a href="#"> <img src="FOOTER\Facebook_font_awesome.svg.png"></a>
-        <a href="#"> <img src="FOOTER\Instagram.png"></a>
-        <a href="#"> <img src="FOOTER\Twitter_X.png"></a>
-        <a href="#"> <img src="FOOTER\LinkedIn_logo_In-Black.svg.png"></a>
-        <a href="#"> <img src="FOOTER\Tiktok_icon.svg.png"></a>
+        <a href="https://www.facebook.com/SaveChildrenID/" target="_blank"> <img src="FOOTER\Facebook_font_awesome.svg.png"> </a>
+        <a href="https://www.instagram.com/savechildren_id" target="_blank"> <img src="FOOTER\Instagram.png"></a>
+        <a href="https://x.com/savechildren_id" target="_blank"> <img src="FOOTER\Twitter_X.png"></a>
+        <a href="https://www.linkedin.com/company/savethechildren-indonesia/" target="_blank"> <img src="FOOTER\LinkedIn_logo_In-Black.svg.png"></a>
+        <a href="#" target="_blank"> <img src="FOOTER\Tiktok_icon.svg.png"></a>
       </div>
     </div>
   </div>
