--- a/BERITA.html
+++ b/BERITA.html
@@ -131,11 +131,11 @@
       </div>
 
       <div class="social-icons">
-        <a href="#"> <img src="FOOTER\Facebook_font_awesome.svg.png"></a>
-        <a href="#"> <img src="FOOTER\Instagram.png"></a>
-        <a href="#"> <img src="FOOTER\Twitter_X.png"></a>
-        <a href="#"> <img src="FOOTER\LinkedIn_logo_In-Black.svg.png"></a>
-        <a href="#"> <img src="FOOTER\Tiktok_icon.svg.png"></a>
+        <a href="https://www.facebook.com/SaveChildrenID/" target="_blank"> <img src="FOOTER\Facebook_font_awesome.svg.png"> </a>
+        <a href="https://www.instagram.com/savechildren_id" target="_blank"> <img src="FOOTER\Instagram.png"></a>
+        <a href="https://x.com/savechildren_id" target="_blank"> <img src="FOOTER\Twitter_X.png"></a>
+        <a href="https://www.linkedin.com/company/savethechildren-indonesia/" target="_blank"> <img src="FOOTER\LinkedIn_logo_In-Black.svg.png"></a>
+        <a href="#" target="_blank"> <img src="FOOTER\Tiktok_icon.svg.png"></a>
       </div>
     </div>
   </div>
