--- a/BERANDA.html
+++ b/BERANDA.html
@@ -62,14 +62,36 @@
             </div>
         </section>
 
-        <section class="section-acara">
-            <h2>BERITA ACARA TERBARU</h2>
-            <div class="card-grid acara-grid">
-                <div class="card card-acara"><div class="card-image-placeholder"></div><div class="card-body">KEGIATAN INI bla bla bla bla bla bla bla bal</div></div>
-                <div class="card card-acara"><div class="card-image-placeholder"></div><div class="card-body">KEGIATAN INI bla bla bla bla bla bla bla bal</div></div>
-                <div class="card card-acara"><div class="card-image-placeholder"></div><div class="card-body">KEGIATAN INI bla bla bla bla bla bla bla bal</div></div>
-            </div>
-        </section>
+        <section class="agenda-section">
+  <h2>AGENDA TERBARU</h2>
+
+  <div class="agenda-grid">
+    <div class="agenda-card">
+      <img src="gambar1.jpg" alt="">
+      <div class="agenda-body">
+        <span class="agenda-date">10 Agustus 2025</span>
+        <p>Kampanye Perlindungan Anak</p>
+      </div>
+    </div>
+
+    <div class="agenda-card">
+      <img src="gambar2.jpg" alt="">
+      <div class="agenda-body">
+        <span class="agenda-date">01 Oktober 2025</span>
+        <p>Monitoring Sekolah Mentubang</p>
+      </div>
+    </div>
+
+    <div class="agenda-card">
+      <img src="gambar3.jpg" alt="">
+      <div class="agenda-body">
+        <span class="agenda-date">11 November 2025</span>
+        <p>Kampanye Perlindungan Anak SD Negeri 12 Pelerang</p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
         <section class="section-capaian">
            <div class="container">
