Update profile lagi

--- a/PROFILE.html
+++ b/PROFILE.html
@@ -127,8 +127,8 @@
 </section>
 
 <section id="goals" class="profile-section goals-kreasi">
-    <h2><span class="red">GOALS</span> PROGRAM KREASI</h2>
-    <p> Peningkatan pencapaian keterampilan dasar <span class="red">
+    <h2><span class="red-goals">GOALS</span> PROGRAM KREASI</h2>
+    <p> Peningkatan pencapaian keterampilan dasar <span class="red-goals">
         (Literasi, Numerasi, Pendidikan Karakter) </span> 
         untuk siswa TK/RA dan SD/MI Indonesia</p>
     
@@ -212,7 +212,107 @@
 </div>
 </section>
 
-     <footer class="footer">
+<section class="STRUKTUR ORGANISASI">
+            <h2>STRUKTUR ORGANSIASI</h2>    
+  <div class="judul"><h2>PIMPINAN PUSAT</h2>
+    <div class="garis"></div>
+  </div>
+
+  <div class="struktur-container">
+    <div class="card-struktur">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+
+    <div class="card-struktur">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+
+    <div class="card-struktur">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+  </div>
+
+  <div class="judul"><h2>NATIONAL OFFICE</h2>
+    <div class="garis"></div>
+  </div>
+
+  <div class="struktur-container">
+    <div class="card-struktur">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+
+    <div class="card-struktur">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+
+    <div class="card-struktur">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+  </div>
+
+  <div class="judul"><h2>PROGRAM MANAGER</h2>
+    <div class="garis"></div>
+  </div>
+
+  <div class="struktur-container">
+    <div class="card-struktur">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+
+    <div class="card-struktur">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+
+    <div class="card-struktur">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+  </div>
+  </div>
+
+    <div class="judul"><h2>KETAPANG OFFICE</h2>
+    <div class="garis"></div>
+  </div>
+
+  <div class="struktur-container">
+    <div class="card-struktur">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+
+    <div class="card-struktur">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+    </div>
+
+    <div class="card-struktur">
+      <img src="FOTO PROFILE\blank-profile-picture-973460_640.jpeg" alt="struktur">
+      <h3 class="nama">NAMA</h3>
+      <p class="jabatan">Jabatan</p>
+  </div>
+  </div>
+
+</section>
+
+<footer class="footer">
   <div class="footer-content">
 
     <!-- About Us -->
